Silence the sqlite-jdbc native-access warning in the packaged jar
Since JDK 22, System::load (used internally by sqlite-jdbc's
SQLiteJDBCLoader to load its bundled native library) is a restricted
method, and the JDK is explicit that this will eventually be blocked
without opting in - not an error today, but a real warning rather
than noise.

The manifest now sets Enable-Native-Access: ALL-UNNAMED via the shade
plugin's manifest transformer, which "java -jar" honors automatically.
That only covers the packaged jar, though - an IDE run configuration
launches off an explicit classpath rather than "-jar", so it never
reads the manifest for this; documented the equivalent VM option to
add there instead, since I don't have IDE access to add it myself.

Verified by inspecting the built jar's manifest and running it: zero
warning lines in the full startup log, versus the warning appearing
immediately when launched off the raw classpath as an IDE would.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_014dBCMP99uGM11y6J2rX7uL